# dominion

./: .gitignore  CLAUDE.md  run.sh
backend/: engine.py  models.py  pyproject.toml  server.py  views.py
backend/cards/: base.py
backend/dominion_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: architecture.md  art-direction.md  card-art-prompts.md  overview.md
frontend/: vite.config.ts
frontend/src/: app.css
frontend/src/lib/api/: websocket.ts
frontend/src/lib/components/: Card.svelte  ChoiceModal.svelte  GameLog.svelte  Hand.svelte  Lobby.svelte  PlayArea.svelte  Supply.svelte  TurnControls.svelte
frontend/src/lib/game/: types.ts
frontend/src/lib/stores/: game.svelte.ts  game.ts
frontend/src/routes/: +layout.svelte  +page.svelte
